--- a/mock/pom.xml
+++ b/mock/pom.xml
@@ -15,6 +15,13 @@
 	</properties>
 	<dependencies>
 	    
+	    <!-- JavaMail -->
+	    <dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
+		            
 	    <!-- Jackson JSON Mapper -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -40,6 +47,12 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+            
 				
 		<!-- AspectJ -->
 		<dependency>
